没有调查就没有发言权

--- a/src/006-反对本本主义.md
+++ b/src/006-反对本本主义.md
@@ -30,9 +30,22 @@
 　　你不相信这个结论吗？事实要强迫你信。你试试离开实际调查去估量政治形势，去指导斗争工作，是不是空洞的唯心的呢？这种空洞的唯心的政治估量和工作指导，是不是要产生机会主义错误，或者盲动主义错误呢？一定要弄出错误。这并不是他在行动之前不留心计划，而是他于计划之前不留心了解社会实际情况，这是红军游击队里时常遇见的。那些李逵⑶式的官长，看见弟兄们犯事，就懵懵懂懂地乱处置一顿。结果，犯事人不服，闹出许多纠纷，领导者的威信也丧失干净，这不是红军里常见的吗？   
 　　必须洗刷唯心精神，防止一切机会主义盲动主义错误出现，才能完成争取群众战胜敌人的任务。必须努力作实际调查，才能洗刷唯心精神。   
 ## 五　社会经济调查，是为了得到正确的阶级估量，接着定出正确的斗争策略  
+Note：
+A1C:没有调查就没有发言权；没有正确的调查就没有发言权。（改写：革命做出正确的斗争策略，要调查清楚经济政治情况。
 
+D:什么是调查，什么是正确的调查。
+调查的对象：各个阶级之间的经济政治情况。
+调查的目的：做出正确的斗争策略。
+
+B:为什么没有调查就没有发言权。
   
-　　为什么要作社会经济调查？我们就是这样回答。因此，作为我们社会经济调查的对象的是社会的各阶级，而不是各种片断的社会现象。近来红军第四军的同志们一般的都注意调查工作了⑷，但是很多人的调查方法是错误的。调查的结果就像挂了一篇狗肉账，像乡下人上街听了许多新奇故事，又像站在高山顶上观察人民城郭。这种调查用处不大，不能达到我们的主要目的。我们的主要目的，是要明了社会各阶级的政治经济情况。我们调查所要得到的结论，是各阶级现在的以及历史的盛衰荣辱的情况。举例来说，我们调查农民成分时，不但要知道自耕农⑸，半自耕农⑹，佃农，这些以租佃关系区别的各种农民的数目有多少，我们尤其要知道富农，中农，贫农，这些以阶级区别阶层区别的各种农民的数目有多少。我们调查商人成分，不但要知道粮食业、衣服业、药材业等行业的人数各有多少，尤其要调查小商人、中等商人、大商人各有多少。我们不仅要调查各业的情况，尤其要调查各业内部的阶级情况。我们不仅要调查各业之间的相互关系，尤其要调查各阶级之间的相互关系。我们调查工作的主要方法是解剖各种社会阶级，我们的终极目的是要明了各种阶级的相互关系，得到正确的阶级估量，然后定出我们正确的斗争策略，确定哪些阶级是革命斗争的主力，哪些阶级是我们应当争取的同盟者，哪些阶级是要打倒的。我们的目的完全在这里。   
+　　为什么要作社会经济调查？我们就是这样回答。因此，作为我们社会经济调查的对象的是社会的各阶级，而不是各种片断的社会现象。
+近来红军第四军的同志们一般的都注意调查工作了⑷，但是很多人的调查方法是错误的。调查的结果就像挂了一篇狗肉账，像乡下人上街听了许多新奇故事，又像站在高山顶上观察人民城郭。这种调查用处不大，不能达到我们的主要目的。我们的主要目的，是要明了社会各阶级的政治经济情况。我们调查所要得到的结论，是各阶级现在的以及历史的盛衰荣辱的情况。
+举例来说，我们调查农民成分时，不但要知道自耕农⑸，半自耕农⑹，佃农，这些以租佃关系区别的各种农民的数目有多少，我们尤其要知道富农，中农，贫农，这些以阶级区别阶层区别的各种农民的数目有多少。
+我们调查商人成分，不但要知道粮食业、衣服业、药材业等行业的人数各有多少，尤其要调查小商人、中等商人、大商人各有多少。
+我们不仅要调查各业的情况，尤其要调查各业内部的阶级情况。
+我们不仅要调查各业之间的相互关系，尤其要调查各阶级之间的相互关系。我们调查工作的主要方法是解剖各种社会阶级，我们的终极目的是要明了各种阶级的相互关系，得到正确的阶级估量，然后定出我们正确的斗争策略，确定哪些阶级是革命斗争的主力，哪些阶级是我们应当争取的同盟者，哪些阶级是要打倒的。我们的目的完全在这里。 
+
 　　什么是调查时要注意的社会阶级？下面那些就是：   
 　　工业无产阶级   
 　　手工业工人   
