没有调查就没有发言权

--- a/src/006-反对本本主义.md
+++ b/src/006-反对本本主义.md
@@ -31,13 +31,13 @@
 　　必须洗刷唯心精神，防止一切机会主义盲动主义错误出现，才能完成争取群众战胜敌人的任务。必须努力作实际调查，才能洗刷唯心精神。   
 ## 五　社会经济调查，是为了得到正确的阶级估量，接着定出正确的斗争策略  
 Note：
-A1C:没有调查就没有发言权；没有正确的调查就没有发言权。（改写：革命做出正确的斗争策略，要调查清楚经济政治情况。
-
+A1C:没有调查就没有发言权；没有正确的调查就没有发言权。（改写：革命做出正确的斗争策略，要调查清楚经济政治情况。）
 D:什么是调查，什么是正确的调查。
 调查的对象：各个阶级之间的经济政治情况。
 调查的目的：做出正确的斗争策略。
 
 B:为什么没有调查就没有发言权。
+初信度：4
   
 　　为什么要作社会经济调查？我们就是这样回答。因此，作为我们社会经济调查的对象的是社会的各阶级，而不是各种片断的社会现象。
 近来红军第四军的同志们一般的都注意调查工作了⑷，但是很多人的调查方法是错误的。调查的结果就像挂了一篇狗肉账，像乡下人上街听了许多新奇故事，又像站在高山顶上观察人民城郭。这种调查用处不大，不能达到我们的主要目的。我们的主要目的，是要明了社会各阶级的政治经济情况。我们调查所要得到的结论，是各阶级现在的以及历史的盛衰荣辱的情况。
