没有调查就没有发言权

--- a/src/006-反对本本主义.md
+++ b/src/006-反对本本主义.md
@@ -32,10 +32,7 @@
 ## 五　社会经济调查，是为了得到正确的阶级估量，接着定出正确的斗争策略  
 Note：
 A1C:没有调查就没有发言权；没有正确的调查就没有发言权。（改写：革命做出正确的斗争策略，要调查清楚经济政治情况。）
-D:什么是调查，什么是正确的调查。
-调查的对象：各个阶级之间的经济政治情况。
-调查的目的：做出正确的斗争策略。
-
+D:什么是调查，什么是正确的调查。 调查的对象：各个阶级之间的经济政治情况。 调查的目的：做出正确的斗争策略。
 B:为什么没有调查就没有发言权。
 初信度：4
   
